issue_754 use color #61B3FF: #61B3FF with background #003976 has contras t ratio of 5.08:1 based on https://webaim.org/resources/contrastchecker

--- a/src/officehours_ui/static/css/main.css
+++ b/src/officehours_ui/static/css/main.css
@@ -166,11 +166,11 @@ h3, .h3 {
 }
 
 a:not(.btn), a:link:not(.btn), a:visited:not(.btn) {
-	color: #0060ba;
+	color: #61B3FF;
 }
 
 a:hover {
-	color: #0060ba;
+	color: #61B3FF;
 }
 
 .alert a:not(.btn) {
